Fixed hidden element overflow

--- a/src/blocks/about/__image/about__image.sass
+++ b/src/blocks/about/__image/about__image.sass
@@ -1,5 +1,5 @@
 .about__image
-  aspect-ratio: 1
+  aspect-ratio: 1 / 1
   object-fit: cover
   object-position: 0 0
   max-width: 100%
